tests/baselines/reference/contextuallyTypeCommaOperator02.errors.txt
tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts(3,1): error TS2322: Type '(a: 文字) => 数字' is not assignable to type '(a: 文字) => 文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts(4,11): error TS2322: Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/types/contextualTypes/commaOperator/contextuallyTypeCommaOperator02.ts (2 errors) ====
    let x: (a: string) => string;
    
    x = (100, a => {
    ~
!!! error TS2322: Type '(a: 文字) => 数字' is not assignable to type '(a: 文字) => 文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
        const b: number = a;
              ~
!!! error TS2322: Type '文字' is not assignable to type '数字'.
        return b;
    });